tests/baselines/reference/externSyntax.errors.txt
tests/cases/compiler/externSyntax.ts(8,20): error TS1183: An implementation cannot be declared in ambient contexts.


==== tests/cases/compiler/externSyntax.ts (1 errors) ====
    declare var v;
    declare module M {
        export class D {
            public p;
        }
        export class C {
            public f();
            public g() { } // error body
                       ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        }
    }
    
    
    
    